Added SDMT test

--- a/src/index.html
+++ b/src/index.html
@@ -57,9 +57,14 @@
 						<img src="resources/images/stroopTest.jpg" alt="Stroop Test" style="width:200px;height:200px;border:0">
 					</a>
 				</td>
+<!--				<td>-->
+<!--					<a id="countdownTestLink" href="tests/countdownTest.html" onclick="setUserInfo()">-->
+<!--						<img src="resources/images/countdown.jpg" alt="Countdown Test" style="width:200px;height:200px;border:0">-->
+<!--					</a>-->
+<!--				</td>-->
 				<td>
-					<a id="countdownTestLink" href="tests/countdownTest.html" onclick="setUserInfo()">
-						<img src="resources/images/countdown.jpg" alt="Countdown Test" style="width:200px;height:200px;border:0">
+					<a id="sdmtTestLink" href="tests/sdmtTest.html" onclick="setUserInfo()">
+						<img src="resources/images/sdmtTest.png" alt="SDMT Test" style="width:200px;height:200px;border:0">
 					</a>
 				</td>
 				<td>
@@ -75,8 +80,11 @@
 				<td id="stroop_test">
 					Stroop Testi
 				</td>
-				<td id="countdown_test">
-					Geri Sayım Testi
+<!--				<td id="countdown_test">-->
+<!--					Geri Sayım Testi-->
+<!--				</td>-->
+				<td id=sdmt_test">
+					SDMT Testi
 				</td>
 				<td id="vr_image_test">
 					Sanal Gerçeklik Resim Testi
