--- a/src/tests/vrImageTest.html
+++ b/src/tests/vrImageTest.html
@@ -111,7 +111,7 @@
         <!-- Modal content-->
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Select Record</h4>
+            <h4 class="modal-title" id="lblSelectRecord">Select Record</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
           <div id="recordListInModal" class="modal-body"/>
