--- a/src/tests/stroopTest.html
+++ b/src/tests/stroopTest.html
@@ -47,8 +47,8 @@
       <input id="radioWord" type="radio" name="stroopType" value="Word" /><span id="word">Kelime</span>
       <span id="lblCount">Adet: </span><input id="imageCount" type="number" style="width: 50px" onchange="onStroopImageCountChanged()"/>
 
-      <button id="btnStart" onclick="startRestTimer()" ondblclick="a = 1">Teste başla</button>
-      <button id="btnStop" onclick="stopTest(true)" disabled=true>Durdur</button>
+      <button id="btnStart" class="btn btn-primary btn-sm" onclick="startRestTimer()" >Teste başla</button>
+      <button id="btnStop" class="btn btn-danger btn-sm" onclick="stopTest(true)" disabled=true>Durdur</button>
       <span id="lblClientId">Kullanıcı ID: </span><output id="wsId"></output>
     </div>
     <div>
@@ -311,6 +311,9 @@
         };
 
       function startRestTimer() {
+        document.getElementById("btnStart").disabled = true;
+        document.getElementById("btnStop").disabled = false;
+
         if (restTimer == null) {
           image.src = "../resources/images/rest.jpg";
 
@@ -340,8 +343,6 @@
         isStarted = true;
         initLocalStorage();
         imagesShownTimeList = [];
-        document.getElementById("btnStart").disabled = true;
-        document.getElementById("btnStop").disabled = false;
 
         isColorSelected = document.getElementById("radioColor").checked;
         typeOfRecord = isColorSelected ? 'color' : 'word';
