--- a/src/tests/vrImageTest.html
+++ b/src/tests/vrImageTest.html
@@ -574,8 +574,6 @@
 <!--<script src="../resources/js/webvr-polyfill.js"></script>-->
 <script src='https://cdn.jsdelivr.net/npm/webvr-polyfill@latest/build/webvr-polyfill.js'></script>
 
-<script src="imageSequence.js"></script>
-
 <script>
   var canvas = document.getElementById('webgl');
 
@@ -597,12 +595,37 @@
   var effect = new THREE.VREffect(renderer);
   effect.setSize(canvas.clientWidth, canvas.clientHeight, false);
 
-  // Add a repeating grid as a skybox.
-  var boxWidth = 5;
   var loader = new THREE.TextureLoader();
 
-  loader.load('../resources/images/countdown.jpg', onTextureLoaded);
+  var textures = [
+    '../resources/images/textures/sky.jpg',
+    '../resources/images/textures/sky-night.jpg',
+    '../resources/images/textures/beach.jpg',
+    '../resources/images/textures/forest.png'
+  ]
+
+  var randomIndex = Math.floor(Math.random() * textures.length);
+
+  var randomTexture = textures[randomIndex];
+
+  loader.load(randomTexture, onTextureLoaded);
   loader.load('../resources/images/rest.jpg', onPicLoaded);
+
+  // lights
+  scene.add( new THREE.AmbientLight( 0x666666 ) );
+  var light = new THREE.DirectionalLight( 0xdfebff, 1 );
+  light.position.set( 50, 200, 100 );
+  light.position.multiplyScalar( 1.3 );
+  light.castShadow = true;
+  light.shadow.mapSize.width = 1024;
+  light.shadow.mapSize.height = 1024;
+  var d = 300;
+  light.shadow.camera.left = - d;
+  light.shadow.camera.right = d;
+  light.shadow.camera.top = d;
+  light.shadow.camera.bottom = - d;
+  light.shadow.camera.far = 1000;
+  scene.add( light );
 
   var cube;
 
@@ -619,22 +642,17 @@
 
     // Add cube mesh to your three.js scene
     scene.add(cube);
-
   }
 
   function onTextureLoaded(texture) {
-    texture.wrapS = THREE.RepeatWrapping;
-    texture.wrapT = THREE.RepeatWrapping;
-    texture.repeat.set(boxWidth, boxWidth);
-
-    var geometry = new THREE.BoxGeometry(boxWidth, boxWidth, boxWidth);
-    var material = new THREE.MeshBasicMaterial({
+    var material = new THREE.MeshPhongMaterial({
       map: texture,
       side: THREE.BackSide
     });
 
-    var skybox = new THREE.Mesh(geometry, material);
-    scene.add(skybox);
+    var skyGeo = new THREE.SphereGeometry(30, 25, 25);
+    var sky = new THREE.Mesh(skyGeo, material);
+    scene.add(sky);
   }
 
   // Request animation frame loop function
@@ -656,6 +674,7 @@
         stopVrTest(false);
       } else {
         loader.load(imageSequence[next], onPicLoaded);
+        imagesShownTimeList.push({ imageFile: imageSequence[next], date: Date.now() });
         next = next + 1;
       }
     }
