--- a/src/tests/sdmtTest.html
+++ b/src/tests/sdmtTest.html
@@ -433,6 +433,7 @@
           const metadataFileContent = {
             age,
             gender,
+            preRestInterval,
             imagesShownTimeList
           };
 
