--- a/src/tests/vrImageTest.html
+++ b/src/tests/vrImageTest.html
@@ -280,6 +280,7 @@
             age,
             gender,
             interval,
+            preRestInterval,
             imagesShownTimeList
           };
 
